--- a/css/OrderSum.css
+++ b/css/OrderSum.css
@@ -4,6 +4,7 @@ body{
     font-family: 'Heebo', Arial, sans-serif;
     padding-left: 20px;
     padding-right: 20px;
+    color: white;
 }
 
 header{
