fix: adjust changes in all pages

--- a/css/EndPageStyle.css
+++ b/css/EndPageStyle.css
@@ -34,6 +34,9 @@ h1{
 /* אזור כפתור */
 .row{
   margin-bottom: 16px;
+  justify-content: center;
+  display: flex;
+  gap: 12px;  
 }
 
 /* כפתור */
