--- a/css/booking.css
+++ b/css/booking.css
@@ -197,15 +197,18 @@ h1{
    ========================= */
 
 .movie-card{
-  padding: 0;
-  overflow:hidden;
+  padding: 12px;
+  border-radius: var(--radius);
 }
 
 .movie-poster{
   width:100%;
-  height:auto;
+  height: 420px;
   display:block;
-  border-radius: var(--radius);
+  object-fit: contain;
+  border-radius: 12px;
+  display: block;
+  background: rgba(0,0,0,.55);
 }
 
 /* =========================
@@ -372,23 +375,8 @@ hr{
     font-size: 24px;
     text-align: center;
   }
-  .booking-sidebar{
-    flex-direction:row;
-    overflow-x:auto;
-    gap: 10px;
-    margin-bottom: 10px;
-  }
-  .booking-sidebar{
-    padding: auto 4px;
-  }
-  .movie-card{
-    max-width: 700px;
-    margin: 0 10px;
-}
-.movie-poster{
-  display:inline-block;
-  height: 100%;
-  border-radius: var(--radius);
+  .movie-poster{
+    height: 340px;
 }
 }
 
@@ -396,28 +384,15 @@ hr{
   .container{
     padding: 12px;
   }
-
   /* כפתורים */
   .primary-btn{
     width: 100%;
   }
-
   /* מפת מושבים */
   #seatMap{
     height: 420px;
   }
-    .card{
-    min-width: 150px;
-    padding: 10px;
-  }
-  .movie-card{
-    margin: 0px;
-    padding: 0px;
-}
-.movie-poster{
-  display:inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: var(--radius);
-}
+  .movie-poster{
+    height: 260px;
+ }
 }
