--- a/css/Movie.css
+++ b/css/Movie.css
@@ -31,6 +31,7 @@ main{
     padding-top: 30px;
     gap: 5px;
     column-gap: 4px;
+    flex-wrap: wrap;
 }
 
 .Details{
@@ -42,6 +43,12 @@ main{
     text-align: center;
     padding-bottom: 30px;
     padding-right: 80px;
+}
+
+.Trailer iframe{
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 
 .M{
