--- a/css/summary.css
+++ b/css/summary.css
@@ -1,3 +1,4 @@
+* { box-sizing: border-box; }
 body{
     background: rgb(40, 34, 34);
     direction: rtl;
@@ -10,10 +11,6 @@ body{
 main{
     padding-left: 20px;
     padding-right: 20px;
-}
-
-.hamburger{
-    display: none;
 }
 
 .Path{
